empezamos con el filtro

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -85,11 +85,11 @@ footer {
 @media (max-width: 700px) {
     .footerNav ul {
         flex-direction: column;
-    }
-    .footerNav ul li {
-        width: 100%;
-        text-align: center;
-        margin: 10px;
+        li {
+            width: 100%;
+            text-align: center;
+            margin: 10px;
+        }
     }
     .socialIcons a {
         padding: 8px;
