--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,10 @@ footer {
 @media (max-width: 700px) {
   .footerNav ul {
     flex-direction: column; }
-  .footerNav ul li {
-    width: 100%;
-    text-align: center;
-    margin: 10px; }
+    .footerNav ul li {
+      width: 100%;
+      text-align: center;
+      margin: 10px; }
   .socialIcons a {
     padding: 8px;
     margin: 4px; } }
@@ -206,25 +206,16 @@ nav {
 
 /*------HONDA------*/
 #honda {
-  grid-template-areas: 'titHonda titHonda titHonda' 'honda1 honda2 honda3'; }
-  #honda #honda1 {
-    grid-area: honda1; }
-    #honda #honda1:hover #hondaDatos1 {
-      display: grid;
-      grid-template-rows: repeat(4, 1fr) 2fr;
-      grid-template-areas: "hondaModelo1" "hondaPrecio1" "hondaToTerr1" "hondaEnergia1" "hondaDesc1"; }
-  #honda #honda2 {
-    grid-area: honda2; }
-    #honda #honda2:hover #hondaDatos2 {
-      display: grid;
-      grid-template-rows: repeat(4, 1fr) 2fr;
-      grid-template-areas: "hondaModelo2" "hondaPrecio2" "hondaToTerr2" "hondaEnergia2" "hondaDesc2"; }
-  #honda #honda3 {
-    grid-area: honda3; }
-    #honda #honda3:hover #hondaDatos3 {
-      display: grid;
-      grid-template-rows: repeat(4, 1fr) 2fr;
-      grid-template-areas: "hondaModelo3" "hondaPrecio3" "hondaToTerr3" "hondaEnergia3" "hondaDesc3"; }
+  grid-template-areas: 'titHonda titHonda titHonda'; }
+  #honda #honda1:hover #hondaDatos1 {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr) 2fr; }
+  #honda #honda2:hover #hondaDatos2 {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr) 2fr; }
+  #honda #honda3:hover #hondaDatos3 {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr) 2fr; }
   #honda h2 {
     grid-area: titHonda; }
 
@@ -412,7 +403,7 @@ nav {
         filter: none; } }
 
 /*CELULAR*/
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 0px) and (max-width: 480px) {
   #tieAut__Main img {
     outline: 3px solid black; }
   #tieAut__Main #tieAut__Grid {
@@ -526,7 +517,114 @@ nav {
   .botonBusqueda:hover {
     background: #cc0000; }
 
-/*------------------------------------------------------------------------------------*/
+/*FILTROS------------------------------------------------------------------------------------*/
+.open-btn {
+  position: sticky;
+  top: 20px;
+  left: 10px;
+  /* Cambiado al lado izquierdo */
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  z-index: 1000; }
+
+#toggleSidebar {
+  z-index: 1; }
+
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -290px;
+  /* Oculta la barra lateral */
+  width: 250px;
+  height: 100%;
+  background-color: #f4f4f4;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  transition: left 0.3s ease;
+  z-index: 999; }
+
+.sidebar h2 {
+  margin-top: 0; }
+
+.sidebar-active {
+  left: 0;
+  /* Muestra la barra lateral */ }
+
+/* Botón de cierre en la esquina superior derecha */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 18px;
+  cursor: pointer; }
+
+.filter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px; }
+
+.content {
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 20px; }
+
+.item {
+  padding: 20px;
+  background-color: #ddd;
+  border: 1px solid #bbb;
+  text-align: center; }
+
+.hidden {
+  display: none; }
+
+/* Toggle personalizado */
+.toggle {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px; }
+
+.toggle input {
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 20px; }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 14px;
+  width: 14px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%; }
+
+input:checked + .slider {
+  background-color: #2196F3; }
+
+input:checked + .slider:before {
+  transform: translateX(20px); }
+
 #mainConsulta {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
