--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,16 +41,16 @@ $paleta-colores: (
     }
 }
 
-body{
-    animation: fadeIn 1s ease-in-out;
-    overflow-x: hidden;
-}
-
 #in_header{
     animation: fadeIn 0.5s ease-in-out;
 }
 
-#bodymain{
+#que-somos{
+    animation: fadeIn 1s ease-in-out;
+    overflow-x: hidden;
+}
+
+body{
     background: repeating-linear-gradient(
         45deg,
         map-get($paleta-colores, 3),
@@ -251,14 +251,20 @@ body{
     letter-spacing: 2px;
     padding: 15px 0;
     margin-bottom: 50px;
-    background-color: map-get($paleta-colores, 8)
+    background-color: map-get($paleta-colores, 9)
 }
 
 #comp-related__companies--logo1{
-    display: flex;
-    justify-content: center;
-    img{
-        width: 50%;
+    a{
+        display: flex;
+        justify-content: center;
+    
+        img{
+            width: 50%;
+            background-color:  rgba(map-get($paleta-colores, 5), 0.1);
+            border-radius: 30px;
+            padding: 2%;
+        }
     }
 }
 
@@ -301,7 +307,7 @@ $numeros-companias: 1, 2, 3, 4, 5, 6, 7;
 
 @mixin cambio-tamaño-img($num-empresa, $porcentaje) {
     #comp-related__companies--logo#{$num-empresa}{
-        img{
+        a img{
             width: #{$porcentaje};
         }
     }
@@ -312,16 +318,35 @@ $numeros-companias: 1, 2, 3, 4, 5, 6, 7;
 @include cambio-tamaño-img(5, 30%);
 @include cambio-tamaño-img(7, 35%);
 
+/*TABLET*/
 
-
-@media screen and (min-width: 1300px) and (max-width: 1400px){
+@media screen and (min-width: 421px) and (max-width: 1023px){
     
+    #logomain{
+        width: 350px;
+        height: 350px;
+    }
+
+    #que-somos{
+        height: 550px;
+    }
+
+    #que-somos__h2{
+        font-size: 65px;
+        padding-top: 15%;
+    }
+
+    #que-somos__p{
+        font-size: 20px;
+        width: 100%;
+        padding-bottom: 5%;
+    }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px){
+@media screen and (min-width: 0px) and (max-width: 480px){
     
     #que-somos{
-        height: 450px;
+        height: 305px;
     }
 
     #que-somos__h2{
