FILTRO ECHO (La tebngo aun mas grande) (perdon alan denuevo nomepongasun1)

--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,8 @@ nav {
   .tieAut__grid--marcas > div {
     transition: all 0.5s; }
     .tieAut__grid--marcas > div:hover {
-      scale: 1.2; }
+      scale: 1.2;
+      z-index: 500; }
       .tieAut__grid--marcas > div:hover img {
         filter: blur(5px) brightness(0.6);
         transition: all 0.5s; }
@@ -460,12 +461,16 @@ nav {
       #tieAut__Main #tieAut__Grid #nissan h2 {
         grid-area: titNiss; } }
 
+/*JS*/
+#cosasJS {
+  position: sticky;
+  top: 20px;
+  z-index: 999; }
+
 /*BUSQUEDA-----------------------------------------------------------------*/
 .body- {
   margin: 0;
   padding: 0;
-  position: sticky;
-  top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -519,8 +524,6 @@ nav {
 
 /*FILTROS------------------------------------------------------------------------------------*/
 .open-btn {
-  position: sticky;
-  top: 20px;
   left: 10px;
   /* Cambiado al lado izquierdo */
   background-color: #333;
@@ -546,9 +549,8 @@ nav {
   padding: 20px;
   transition: left 0.3s ease;
   z-index: 999; }
-
-.sidebar h2 {
-  margin-top: 0; }
+  .sidebar h2 {
+    margin-top: 0; }
 
 .sidebar-active {
   left: 0;
@@ -568,22 +570,17 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 15px; }
-
-.content {
-  margin: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 20px; }
-
-.item {
-  padding: 20px;
-  background-color: #ddd;
-  border: 1px solid #bbb;
-  text-align: center; }
+  margin: 15px 0 15px 30px; }
 
 .hidden {
-  display: none; }
+  filter: blur(10px);
+  /* Aplica el desenfoque */
+  pointer-events: none;
+  /* Evita la interacción con elementos desenfocados */
+  opacity: 0.5;
+  /* Reduce ligeramente la opacidad */
+  transition: filter 0.3s, opacity 0.3s;
+  /* Suaviza las transiciones */ }
 
 /* Toggle personalizado */
 .toggle {
@@ -591,11 +588,10 @@ nav {
   display: inline-block;
   width: 40px;
   height: 20px; }
-
-.toggle input {
-  opacity: 0;
-  width: 0;
-  height: 0; }
+  .toggle input {
+    opacity: 0;
+    width: 0;
+    height: 0; }
 
 .slider {
   position: absolute;
@@ -607,17 +603,16 @@ nav {
   background-color: #ccc;
   transition: 0.4s;
   border-radius: 20px; }
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 14px;
-  width: 14px;
-  left: 3px;
-  bottom: 3px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%; }
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 14px;
+    width: 14px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%; }
 
 input:checked + .slider {
   background-color: #2196F3; }
