--- a/scss/_registro-inicioSesion.scss
+++ b/scss/_registro-inicioSesion.scss
@@ -6,7 +6,7 @@ $color-blanco: #fff;
     justify-content: center;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(27deg, #d49090 50%, #b17272, #b61111a1 50%, #aa1b1b);
+    background: linear-gradient(27deg, map-get($paleta-colores, 7) 50%, map-get($paleta-colores, 4), map-get($paleta-colores, 11) 50%, map-get($paleta-colores, 13) );
 
 }
 
@@ -76,25 +76,28 @@ $color-blanco: #fff;
     height: 40px;
     width: 78%;
     background: transparent;
-    color: #b9c4c6;
+    
     border-radius: 2px;
     cursor: pointer;
     outline: none;
     border: 1px solid #9b0000;
     transition: all .5s ease;
-
-
-
+    a{
+        text-decoration: none;
+        color: black;
+        transition: all .3s;
+    }
 }
 
 
 
 .form-body button:hover{
-    color: #d5dbdd;
     transform: scale(1.1);
     border: 3px solid #9b0000;
     background: linear-gradient(#aa1b1b,#c72c2c);
-
+    a{
+        color: #d5dbdd;
+    }
 }
 
 #link{
