--- a/scss/_autos.scss
+++ b/scss/_autos.scss
@@ -4,10 +4,6 @@
     padding: $top $right $bottom $left;
 }
 
-$colores:(
-    bordeImg: black,
-);
-
 $areasGrid:(
     1: honda,
     2: audi,
@@ -59,10 +55,10 @@ $areasNiss:(
     display: none;
 }
 
-#tieAut__Main{
+#tieAutMain{
     @include padding(10px, 5%, 140px, 5%);
     img{
-        outline: 5px solid map-get($colores, bordeImg);
+        outline: 5px solid map-get($paleta-colores, 2);
         border-radius: 20px
     }
     a{
@@ -89,7 +85,7 @@ $areasNiss:(
         height: 292px;
         color: white;
         transform: translate(0px, -292px);
-        outline: 5px solid map-get($colores, bordeImg);
+        outline: 5px solid map-get($paleta-colores, 2);
         border-radius: 20px;
 
         filter: blur(0px);
@@ -358,7 +354,7 @@ $areasNiss:(
 
 /*COLORES*/
 
-#tieAut__Main{
+#tieAutMain{
     background: repeating-linear-gradient(
         45deg,
         rgb(100, 100, 100),
@@ -373,7 +369,7 @@ $areasNiss:(
 
 /*PC De La Escuela*/
 @media screen and (min-width: 1300px) and (max-width: 1400px){
-    #tieAut__Main{
+    #tieAutMain{
         div[id*="Datos"]{
             h4{
                 font-size: 30px;
@@ -387,9 +383,9 @@ $areasNiss:(
 
 /*TABLET*/
 @media screen and (min-width: 421px) and (max-width: 1023px){
-    #tieAut__Main{
+    #tieAutMain{
         img{
-            outline: 3px solid map-get($colores, bordeImg);
+            outline: 3px solid map-get($paleta-colores, 2);
         }
         #tieAut__Grid{
             grid-row-gap: 5px;
@@ -425,9 +421,9 @@ $areasNiss:(
 
 /*CELULAR*/
 @media screen and (min-width: 0px) and (max-width: 480px){
-    #tieAut__Main{
+    #tieAutMain{
         img{
-            outline: 3px solid map-get($colores, bordeImg);
+            outline: 3px solid map-get($paleta-colores, 2);
         }
         #tieAut__Grid{
             grid-row-gap: 5px;
@@ -538,7 +534,7 @@ $areasNiss:(
 
 /*JS*/
 
-#cosasJS{
+#tieAutMain__cosasJS{
     position: sticky;
     top: 20px;
     z-index: 999;
@@ -546,7 +542,7 @@ $areasNiss:(
 
 /*BUSQUEDA-----------------------------------------------------------------*/
 
-.body-{
+#tieAutMain__cosasJS--contenedorBusqueda{
     margin: 0;
     padding: 0;
     display: flex;
@@ -555,7 +551,7 @@ $areasNiss:(
     transform: translate(8px, 0px);
 }
 
-.contenedorBusqueda {
+#tieAutMain__cosasJS--contenedorBusqueda--busqueda{
     position: relative;
     padding: 10px;
     display: flex;
@@ -565,7 +561,7 @@ $areasNiss:(
         font-size: 20px;
     }
     &:hover{ 
-        #search-input {
+        #tieAutMain__cosasJS--contenedorBusqueda--busqueda--busquedaInput {
             width: 350px;
         }
         span {
@@ -574,7 +570,7 @@ $areasNiss:(
     }
 }
 
-#search-input {
+#tieAutMain__cosasJS--contenedorBusqueda--busqueda--busquedaInput{
     outline: none;
     box-sizing: border-box;
     height: 60px;
@@ -588,7 +584,7 @@ $areasNiss:(
     transition: all 0.7s ease;
 }
 
-.botonBusqueda {
+#tieAutMain__cosasJS--contenedorBusqueda--busqueda--botonBusqueda{
     position: absolute;
     right: 0px;
     width: 80px;
