Detalle en la imagen del index

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -197,7 +197,7 @@ main{
 #que-somos__foto-fondo{
     position: absolute;
     z-index: -1;
-    filter: brightness(50%);
+    filter: blur(7px);
     height: 825px;
     margin: 0;
     padding: 0;
